On avance à nouveau

--- a/fblike/src/index.css
+++ b/fblike/src/index.css
@@ -2,6 +2,10 @@ body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
 }
+img{
+  height: 20em;
+  width: 20em;
+}
 
 ol, ul {
   padding-left: 30px;
